atualizado index e CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="topo">
-        <h1>Roberto Santos</h1>
+        <h1>Portfolio - Roberto dos Santos</h1>
         <p>Transformando conhecimento em soluções tecnológicas.</p>
     </header>
     <nav class="menu">
@@ -52,16 +52,20 @@
                     <h3>Projetos Front-end</h3>
             
                     <h4>Projeto Login</h4>
-                    <p>Interface de autenticação desenvolvida para praticar criação de layouts, estilização de formulários, responsividade e organização visual utilizando HTML5 e CSS3.</p>
-                    <a href="#">projeto-login | GitHub</a>
+                    <p>Interface de autenticação desenvolvida para praticar criação de layouts, estilização de formulários, responsividade e organização visual com media query utilizando HTML5 e CSS3.</p>
+                    <a href="https://robertosants.github.io/projeto-login/" target="_blank">projeto-login | GitHub</a>
                     <p><strong>Tecnologias: HTML5 e CSS3.</strong></p>
                     <h4>Projeto Redes Sociais</h4>
+                    <p>Projeto que simula a interface de um dispositivo móvel exibindo minhas redes sociais por meio de interações com botões. Desenvolvido para praticar posicionamento de elementos, layout e construção de interfaces interativas utilizando HTML5 e CSS3.</p>
+                    <a href="https://robertosants.github.io/projeto-redes-sociais/" target="_blank">projeto-redes-sociais</a>
+                    <p><strong>Tecnologias: HTML5 e CSS3.</strong></p>
+                    <h4>Projeto Cordel Moderno</h4>
                     <p>Site desenvolvido para leitura do cordel “Cordel Moderno”, explorando tipografia, imagens e efeito parallax para melhorar a experiência visual.</p>
-                    <a href="#">projeto-cordel-moderno | GitHub</a>
+                    <a href="https://robertosants.github.io/projeto-cordel-moderno/" target="_blank">projeto-cordel-moderno | GitHub</a>
                     <p><strong>Tecnologias: HTML5 e CSS3.</strong></p>
                     <h4>Projeto Android</h4>
                     <p>Projeto informativo que apresenta a história do mascote do sistema Android, com foco em semântica HTML, organização de conteúdo e design responsivo.</p>
-                    <a href="#">projeto-android | GitHub</a>
+                    <a href="https://robertosants.github.io/projeto-android/" target="_blank">projeto-android | GitHub</a>
                     <p><strong>Tecnologias: HTML5 e CSS3.</strong></p>
                 </article>
                 <article>
@@ -72,8 +76,10 @@
                     <p><strong>Ferramentas utilizadas: Oracle SQL Developer e Oracle SQL Data Modeler.</strong></p>
                     <h4>GLPI Help Desk</h4>
                     <p>Projeto de implantação de ambiente de help desk para gestão de chamados e ativos, simulando rotinas reais de suporte técnico e atendimento ao usuário utilizando o GLPI.</p>
+                    <a href="https://goti-ifal.us4.glpi-network.cloud/" target="_blank">goti-ifal</a>
                     <h4>SIGRA App</h4>
                     <p>Aplicação web desenvolvida para centralizar o controle interno e logístico do ciclo de vida de rastreadores veiculares, integrando administração, manutenção e estoque técnico.</p>
+                    <a href="https://projeto-sigra-app.onrender.com/" target="_blank">projeto-sigra-app</a>
                     <p>O sistema gerencia entrada em estoque, movimentações, vinculação com clientes, eventos e manutenções, garantindo rastreabilidade e integridade dos dados. Inclui emissão de relatórios, dashboard com indicadores e controle de acesso por perfis.</p>
                     <p><strong>Tecnologias: JavaScript, EJS e Docker.</strong></p>
                 </article>
@@ -101,9 +107,10 @@
         </aside>
     </main>
     <footer class="rodape">
-        <h1>Desenvolvido por Roberto Santos.</h1>
-        <p>Este portfólio apresenta minha trajetória, projetos e evolução na área de tecnologia.</p>
-        <p>Construindo soluções com tecnologia.</p>
+        <small>
+            Desenvolvido por Roberto dos Santos Silva Junior.<br>
+            Este site apresenta minha trajetória, projetos e evolução na área de T.I.
+        </small>
     </footer>
 </body>
 </html>
