inserido links e correção de alguns estilos

--- a/index.html
+++ b/index.html
@@ -88,17 +88,35 @@
                 <article>
                     <h2>Certificados</h2>
                     <p>Cursos complementares voltados ao desenvolvimento profissional e tecnológico, incluindo Excel Avançado, comunicação, administração, matemática financeira e outras formações que fortalecem minha base profissional.</p>
+                    <p><strong>Certificados:</strong></p>
+                    <ul>
+                        <li><a href="https://drive.google.com/file/d/1UYRcvD3GnRs9eUZSTFJkqp6N_VF9IbTm/view?usp=sharing" target="_blank">Ocupações Administrativas (1.840hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1WR7KEayFL89Ne6YSFuTHTLzJQxll-1w3/view?usp=sharing" target="_blank">Administração na Prática (30hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1pDYqYGCQHRtqA2cA9FNaKcB03UO8B1JD/view?usp=sharing" target="_blank">Matemática Financeira (30hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1wOs-VDGHCP9PVGqf4u8MI7cSnwP1KL56/view?usp=sharing" target="_blank">Excel Avançado 2010 (20hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1TCdpGJhbgkN9JmQFJ8ScJ_IftDiBwt6x/view?usp=sharing" target="_blank">Accountability (08hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1Rr_lIzrUkmCelsiS-H_D-iAy7plRAPpN/view?usp=sharing" target="_blank">Apresentações Corporativas (08hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1kf7RvukyBz4g3F5u-r4lFQWDWMQpJtBg/view?usp=sharing" target="_blank">Atitudes Empreendedora (03hrs) — CIEE</a></li>
+                        <li><a href="https://drive.google.com/file/d/1cZ_hzMtJzY_PMSZJQJMAOLeTFU6Uq2mR/view?usp=sharing" target="_blank">Comunicação Virtual (03hrs) — CIEE</a></li>
+                    </ul>
                 </article>
             </section>
             <section id="contato">
                 <h2>Contato</h2>
                 <p>Estou aberto a oportunidades, networking e conversas sobre tecnologia. Caso queira entrar em contato, fique à vontade para me enviar uma mensagem.</p>
+                <p><strong>Roberto dos Santos Silva Junior</strong></p>
+                <ul>
+                    <li id="celular"><strong>Celular(WhatsApp): <a href="tel:+55 (82) 99646-0159">(82) 99646-0159</a></strong></li>
+                    <li id="email"><strong>Email: <a href="mailto: j-uni-nho25@hotmail.com">j-uni-nho25@hotmail.com</a></strong></li>
+                    <li><strong>LinkedIn: <a href="https://www.linkedin.com/in/roberto-santos-b9b048200/" target="_blank">roberto-santos</a></strong></li>
+                    <li><strong>GitHub: <a href="https://github.com/RobertoSants" target="_blank">RobertoSants</a></strong></li>
+                </ul>
             </section>
         </div>
         <aside class="secundario">
             <div class="card">
                 <h2>Tecnologias principais</h2>
-                <p>HTML, CSS, JavaScript, SQL e GLPI.</p>
+                <p>HTML, CSS, JavaScript, Oracle SQL, GLPI e Trello.</p>
                 <h2>Áreas de interesse</h2>
                 <p>Desenvolvimento web, back-end, suporte técnico, help desk e banco de dados.</p>
                 <h2>Perfil</h2>
