correções pontuais em contatos

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <p>Estou aberto a oportunidades, networking e conversas sobre tecnologia. Caso queira entrar em contato, fique à vontade para me enviar uma mensagem.</p>
                 <p><strong>Roberto dos Santos Silva Junior</strong></p>
                 <ul>
-                    <li id="celular"><strong><i class="fi fi-brands-whatsapp"></i> Celular: <a href="tel:+55 (82) 99646-0159">(82) 99646-0159</a></strong></li>
+                    <li id="celular"><strong><i class="fi fi-brands-whatsapp"></i> <a href="tel:+55 (82) 99646-0159">(82) 99646-0159</a></strong></li>
                     <li id="email"><strong>Email: <a href="mailto: j-uni-nho25@hotmail.com">j-uni-nho25@hotmail.com</a></strong></li>
-                    <li id="linkedin"><strong><i class="fi fi-brands-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/roberto-santos-b9b048200/" target="_blank">roberto-santos</a></strong></li>
-                    <li id="github"> <i class="fi fi-brands-github"></i> <strong>GitHub: <a href="https://github.com/RobertoSants" target="_blank">RobertoSants</a></strong></li>
+                    <li id="linkedin"><strong><i class="fi fi-brands-linkedin"></i> <a href="https://www.linkedin.com/in/roberto-santos-b9b048200/" target="_blank">roberto-santos</a></strong></li>
+                    <li id="github"> <i class="fi fi-brands-github"></i> <strong><a href="https://github.com/RobertoSants" target="_blank">RobertoSants</a></strong></li>
                 </ul>
             </section>
         </div>
